# mdspass3

./: CMakeLists.txt  HOWTO_BUILD_RUN  README.md
Documents/: mdspass 使用手引書.docx  mdspass 使用手引書_Mac追記.docx  mdspass 高速化設計書.docx
cmaketest/: CMakeLists.txt
forWin/: .ninja_deps  SETDAT  mdspass3.exp  mdspass3.lib  ssnormal.d
forWin/pot/: ADP_Nd.pot  ADP_NdFeB.pot  ADP_NdFeB.pot~  ADP_Sn.pot  Dipole_BN  Dipole_BTO-Li  Dipole_BTO1.pot  Dipole_YSZ.pot  Dipole_YSZ.pot.00  EAMPARAM.PRB59-3393.al.den.fine  EAMPARAM.PRB59-3393.al.embed  EAMPARAM.PRB59-3393.al.pair  EAMPARAM.PRB59-3393.ni.den.fine  EAMPARAM.PRB59-3393.ni.pair.fine  EAMPARAM.PRB63-224106.cu.den.fine  EAMPARAM.PRB63-224106.cu.pair.fine  ReaxFF.config2  ReaxFF.input  Wang  inter2d_iv_stuart.d  meam_si_ref.d  (+2 more)
pot/: Dipole_YSZ_20140603.pot  EAMPARAM.PRB68-024102.al.embed  dipole.parameter  meam_sn_ref.d
src/: BaseWindow.cpp  BaseWindow.h  Chromosome.cpp  Chromosome.h  Configuration.cpp  Configuration.h  CreateConfigWindow.cpp  CreateConfigWindow.h  CustomChoice.cpp  CustomChoice.h  CustomInput.cpp  CustomInput.h  DifferentialEvolution.cpp  DifferentialEvolution.h  Double3.h  EditAtomWindow.cpp  EditAtomWindow.h  EditElementWindow.cpp  EditElementWindow.h  EditElementXZPlaneWindow.cpp  EditElementXZPlaneWindow.h  ExtraWindow.cpp  ExtraWindow.h  FramedPanel.cpp  FramedPanel.h  GlWindow.cpp  GlWindow.h  Input.cpp  Input.h  MainWindow.cpp  MainWindow.h  Matrix.cpp  Matrix.h  MdViewerWindow.cpp  MdViewerWindow.h  MeasureWindow.cpp  MeasureWindow.h  MeshRenderer.cpp  MeshRenderer.h  OpenFileWindow.cpp  (+122 more)
(+3 files in other folders)
